# tranlator

./: .cproject  .project  Auth.txt  Makefile  Makefile.am  auth_key.txt  configure.ac  google_translate_research_api_example_result.xml  key.txt  makefile  test_key.sh  translate_ja-en.sh  update_key.sh
files/: google_translate_research_api_example_result.xml  google_translate_research_api_result_error_key.xml  google_translate_research_api_result_error_no_query.xml  google_translate_research_api_result_error_url_too_long.html  google_translate_research_api_result_unsupporte_lang_pair.xml  test.xml  test_zh.xml  test_zh_size.xml
scripts/: find_missing.sh
sql/: database.sql  others.sql
src/: ant_link_parts.h  article.cpp  article.h  article_reader.cpp  article_reader.h  article_writer.cpp  article_writer.h  corpus.cpp  corpus.h  corpus_translator.cpp  database_mysql.cpp  database_mysql.h  google_research_translator.cpp  google_research_translator.h  google_translator.cpp  google_translator.dep  google_translator.h  input_manager.cpp  input_manager.h  language.cpp  language.h  string_utils.h  sys_file.cpp  sys_file.h  thread_child.cpp  thread_child.h  thread_master.cpp  thread_master.h  translation_write_exception.cpp  translation_write_exception.h  translator.cpp  webpage_retriever.cpp  webpage_retriever.dep  webpage_retriever.h
test/: google_translate.cpp  test_database.cpp  test_parse_translation.cpp  test_spaces_removal.cpp
utils/: reset_artile.cpp
